# vedirect-jmfife

./: README.md  distribute  pyproject.toml  setup.cfg  setup_old.py  tox.ini
src/vedirect/: vedirect.py
