[build-system]
requires = ["setuptools>=54.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedirect_jmfife"
version = "1.1.0"
authors = [
  { name="J. M. Fife", email="jmfife@gmail.com" },
]
description = "Read Victron VEDirect Devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pyserial',
] 

[project.scripts]
vedirect = "vedirect.vedirect:main"

