[build-system]
requires = ["setuptools>=54.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedirect-JL"
version = "1.1.1"
authors = [
  { name="Jordan Liss", email="jordanliss13@gmail.com" },
]
description = "Read Victron VEDirect Devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pyserial',
] 

[project.scripts]
vedirect = "vedirect.vedirect:main"

